# meeting-scribe

./: .gitignore  README.md  com.meetingscribe.agent.plist  config.yaml.example  dictation.py  pyproject.toml  setup_audio.sh
meeting_scribe/: __init__.py  app.py  config.py
meeting_scribe/audio/: buffer.py  capture.py
meeting_scribe/detection/: apps.py  monitor.py
meeting_scribe/diarization/: __init__.py  cluster.py  embeddings.py  matcher.py  profiles.py
meeting_scribe/hotkey/: listener.py
meeting_scribe/output/: markdown.py  writer.py
meeting_scribe/summarization/: __init__.py  engine.py  prompt.py
meeting_scribe/transcription/: engine.py  streaming.py
meeting_scribe/ui/: menubar.py
