[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-scribe"
version = "0.1.0"
description = "macOS meeting transcription with speaker diarization"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.0",
    "sounddevice>=0.5.0",
    "numpy>=2.0",
    "rumps>=0.4.0",
    "pynput>=1.8.0",
    "speechbrain>=1.0",
    "scipy>=1.12",
    "pyyaml>=6.0",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
# Note: RealtimeSTT pins older faster-whisper. Install with:
#   pip install --no-deps RealtimeSTT pyperclip pyaudio soundfile webrtcvad-wheels websocket-client websockets
dictation = [
    "pyperclip>=1.8.0",
    "pyaudio>=0.2.14",
    "soundfile>=0.13.0",
    "webrtcvad-wheels>=2.0.14",
    "websocket-client>=1.8.0",
    "websockets>=15.0",
]

[project.scripts]
meeting-scribe = "meeting_scribe.app:main"

[tool.setuptools.packages.find]
include = ["meeting_scribe*"]
